# bdshorten

./: .gitignore  Cargo.toml  README.md  bdshorten.sql  go.mod  go.sum  init.sql  links.json  main.go
src/: main.rs
