[package]
name = "linkshortener"
version = "0.1.0"
authors = ["AmiliaM <amiliamac@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0"
actix-rt = "1.0"
actix = "0.9"
serde = "1"
chrono = { version = "0.4", features = ["serde"] }
url = { version = "2", features = ["serde"] }