[package]
name = "linkshortener"
version = "0.1.0"
authors = ["AmiliaM <loweg@bgdn.cc>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-http = "1.0"
actix-rt = "1.0"
actix-web = "2.0"
actix = "0.9"
base64 = "*"
chrono = { version = "=0.4", features = ["serde"] }
failure = "*"
rand = "*"
serde = "1.0"
tokio = "0.2"
tokio-postgres = "0.5"
postgres-types = { version = "0.1", features = ["derive", "with-chrono-0_4"] }
url = { version = "2", features = ["serde"] }
env_logger = "*"
